--- a/extensions/package.json
+++ b/extensions/package.json
@@ -9,7 +9,8 @@
     "coc-emmet": ">=1.1.6",
     "coc-html": ">=1.6.1",
     "coc-css": ">=1.3.0",
-    "coc-yaml": ">=1.8.0"
+    "coc-yaml": ">=1.8.0",
+    "coc-floaterm": ">=0.2.2"
   },
   "disabled": [],
   "locked": [],
